set hot reloading on docker

--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start:dev": "nodemon --env-file=.env.development src/index.js",
     "docker:build": "docker build -t node-docker-mongo:latest-dev .",
-    "docker:run": "docker run --name api node-docker-mongo:latest-dev",
+    "docker:run": "docker run -v ./:/user/src/app node-docker-mongo:latest-dev",
     "docker:stop": "docker stop api"
   },
   "author": "Alican Basak",
