--- a/api/.env.development
+++ b/api/.env.development
@@ -1,1 +1,6 @@
 PORT=3000
+MONGO_PROTOCOL=mongodb://
+MONGO_URL=my-app-db:27017
+MONGO_USERNAME=alican
+MONGO_PASSWORD=example1234
+MONGO_DATABASE=my-app-db
