--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,8 @@ services:
       - "27017:27017"
     volumes:
       - ./data:/data/db
+    networks:
+      - my-app-network
 
   api:
     container_name: api
@@ -18,3 +20,11 @@ services:
       - "3000:3000"
     volumes:
       - ./api:/user/src/app
+    networks:
+      - my-app-network
+    depends_on:
+      - mongo
+
+networks:
+  my-app-network:
+    driver: bridge
